--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+header {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+#context {
+  display: flex;
+  align-items: center;
 }
 
 .grid-container {
